--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# manual
+.DS_Store
+*.bz2
+ark/
+bonus/
+c3/diversity
+c3/motorex
+c3/vowels
+*dmp2d*
+*vworlds*
+status.sh
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
